--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
   js_build: # this job is responsible for building Javascript assets and making them available for the "build" job
     executor: # we specify our executor to use the node orb.
       name: node/default
-      tag: '14.18'
+      tag: '14.1'
     steps:
       - *attach_workspace
       - checkout # get the code from GitHub
@@ -227,9 +227,9 @@ jobs:
             sudo apt-get update --allow-releaseinfo-change
             sudo apt-get install cmake pkg-config
       - ruby-deps
-      - node/install-packages:
-          pkg-manager: yarn
-          cache-version: *npm-cache-version # Gets cache version from project environment variable (E.g v1)
+      # - node/install-packages:
+      #     pkg-manager: yarn
+      #     cache-version: *npm-cache-version # Gets cache version from project environment variable (E.g v1)
       - run:
           name: Run markdownlint with pronto
           command: bundle exec pronto run -f github_pr -c origin/master
