--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,6 +10,6 @@
 *.pdf @circleci/docs
 
 /src-js/** @circleci/docs-disco
-./packages*.json @circleci/docs-disco
+./package*.json @circleci/docs-disco
 ./*.lock @circleci/docs-disco
 ./Gemfile* @circleci/docs-disco
